--- a/HomeWork08/Tasks/pom.xml
+++ b/HomeWork08/Tasks/pom.xml
@@ -25,6 +25,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aspects</artifactId>
+			<version>5.3.8</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.h2database</groupId>
